# PartDB

./: .travis.yml  Database.py  Label.py  PartDB.py  PersistentDict.py  README.md  config.py  pyproject.toml  requirements.txt  testDatabase.py  testPartDB.py
Actions/: List.py  __Action.py
Commands/: Add.py  Delete.py  List.py  Print.py  Scan.py  Search.py  Update.py  __Command.py
Distributors/: Digikey.py  Farnell.py  Mouser.py  __Distributor.py  testDigikey.py  testFarnell.py  testMouser.py
Tests/: Database.py
partdb/: __main__.py  database.py  label.py  persistent_dict.py  util.py
partdb/commands/: add.py  delete.py  list.py  print.py  scan.py  search.py  update.py
partdb/distributors/: __distributor.py  digikey.py  farnell.py  lcsc.py  mouser.py
tests/: testDatabase.py  testDigikey.py  testFarnell.py  testLCSC.py  testMouser.py  testPartDB.py
